--- a/assets/codeblock.css
+++ b/assets/codeblock.css
@@ -103,4 +103,22 @@ pre, code {
    border-radius: 0px 0px 8px 8px;
    border-top: 0px solid;
 }
- 
+.code_switcher_container_parent {
+  position: relative;
+}
+.code_switcher_code_action_container {
+  position:  absolute;
+  right: 6px;
+  top: 6px;
+  z-index: 1;
+}
+.code_switcher_copy_button {
+  background: url("icon_copy.svg");
+  background-size:  18px 18px;
+  border: none;
+  font-size: 18px;
+  min-width: 18px;
+  min-height: 18px;
+  height: 18px;
+  width: 18px;
+}
